packages/svelte/tests/validator/samples/bindable-prop-not-mutated/input.svelte
<script>
	let { 
		foo = $bindable(),
		bar = $bindable(),
		baz = $bindable()
	} = $props();
	
	bar = 'new value';
	baz.nested = 'value';
</script>

<p>{foo} {bar} {baz.nested}</p>
